2003-04-22  Bruno Haible  <bruno@clisp.org>

	* plural-table.c (plural_table): Add an entry about Faroese.
	Reported by Jacob Sparre Andersen <sparre@crs4.it>.

2003-04-13  Bruno Haible  <bruno@clisp.org>

	* po.h (po_scan_start, po_scan_end): New declarations.
	* po.c: Reorder functions.
	(po_scan_start, po_scan_end): New functions.
	(po_scan, po_scan_file): Use them.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New variables ABIFLAGS, DEFS. Avoid rules with no
	lines. Don't use the force target. Correct wildcard syntax.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-13  Bruno Haible  <bruno@clisp.org>

	* xgettext.c (construct_header): Remove spurious comma.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (EXTRA_DIST): Add Makefile.vms.
	(x-java.c): Prepend a few VMS specific lines.
	* po-lex.c (mbfile_getc): Change element type of scatchbuf to
	'unsigned char'.
	* write-java.c (string_hashcode, write_java_string): Cast argument of
	u8_mbtouc.
	* write-tcl.c (write_tcl_string): Likewise.
	* x-python.c (phase7_getuc): Cast argument of unicode_name_character.
	* msgfilter.c (write): #undef before redefining it. Needed for VMS.
	(select): Likewise.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (noinst_HEADERS): Add po-gram-gen2.h.
	(BUILT_SOURCES): Add po-gram-gen2.h.
	(DISTCLEANFILES): Remove po-gram-gen2.h.
	(po-gram-gen2.h): Simplify rule.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc: New file.
	* Makefile.am (EXTRA_DIST): Add it.
	* msgfilter.c: Include <sys/time.h> only if it exists.
	(process_string): Mark as NYI on Woe32.
	* msgfmt.c (sigjmp_buf, sigsetjmp, siglongjmp): Provide fallback
	definitions for Woe32.
	* msginit.c: Include <fcntl.h>, for F_OK. Include <pwd.h> only if it
	exists.
	(get_user_pwd, get_user_fullname): Adapt for when <pwd.h> is missing.
	(project_id, project_id_version, get_user_email,